# aimlib-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
aimlib/: __init__.py  cli.py
examples/: quickstart.py
tests/: test_sdk.py
tools/: audit_public_package.py
